[project]
name = "docs-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.4.22",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-nvidia-ai-endpoints>=1.4.0",
    "langchain-openrouter>=0.2.3",
    "langchain-tavily>=0.2.18",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "streamlit>=1.57.0",
]
